--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "dependencies": {
     "fs-extra": "8.1.0",
-    "jszip": "3.2.2",
-    "klaw": "3.0.0"
+    "jszip": "^3.7.1",
+    "klaw": "^3.0.0"
   }
 }
