--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "zipper",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Module for zipping/unzipping files",
   "homepage": "https://github.com/taylortom/zipper",
-  "main": "index.js",
+  "type": "module",
+  "main": "./lib/zipper.js",
   "dependencies": {
     "fs-extra": "8.1.0",
     "jszip": "^3.7.1",
